--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,18 +4,18 @@
           <meta charset="utf-8">
           <meta name="author" content="Mohammed Ajao">
           <meta http-equiv="U-XA-Compatible" content="IE=edge">
-          <meta name="viewport" content="width=device-width;scale=1.0">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <link rel="stylesheet" href="{{site.baseurl}}/css/common.css">
      </head>
      <header>
           <h1><strong>Portfolio</strong></h1>
-          <nav>
-               <ul>
-                    <li><a href="{{site.baseurl}}/index.html">Home</a></li>
-                    <li><a href="{{site.baseurl}}/news.html">News</a></li>
-               </ul>
-          </nav>
+          {% include nav.html %}
      </header>
      <body>
           {{content}}
      </body>
+     <footer>
+          {% include nav.html %}
+          <p>©2017 Adrian Warholm</p>
+     </footer>
 </html>
